examples/__outputs__/10_transport-http/transport-http_method-get.output.txt
/some/path/to/transport-http_method-get.ts:XX:XX
await graffle.gql`mutation { addPokemon(attack:0, defense:0, hp:1, name:"Nano", type: grass) { name } }`.send()
              ^


TypeError: graffle.gql is not a function
    at <anonymous> (/some/path/to/transport-http_method-get.ts:XX:XX:15)
    at ModuleJob.run (node:internal/modules/esm/module_job:XX:XX)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:XX:XX)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:XX:XX)

Node.js vXX.XX.XX